# hippo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/guide/: README.md  quickstart.md
docs/guide/install/: README.md  auth-setup.md  configuration.md  docker.md  local-uv.md  production.md  upgrading.md
docs/guide/technical/: README.md  agent.md  api-layer.md  architecture.md  auth-and-rbac.md  cli.md  config-and-setup.md  development.md  embeddings.md  integrations.md  rag-pipeline.md  retrieval.md  security-model.md  storage-layer.md
docs/guide/users/: README.md  admin-tasks.md  asking-questions.md  documents-and-folders.md  owner-tasks.md  profile-and-tokens.md  signing-in.md  troubleshooting.md  using-mcp.md  using-slack.md
docs/superpowers/notes/: 2026-06-13-repo-audit.md  2026-06-13-testing-round.md
docs/superpowers/plans/: 2026-06-11-knowledge-hub.md  2026-06-12-auth-and-sources.md  2026-06-12-docx-parsing.md  2026-06-12-mcp-server.md  2026-06-12-production-readiness.md  2026-06-12-roadmap.md  2026-06-13-fresh-clone-fixes.md  2026-06-13-settings-ui.md  2026-06-13-slack-integration.md  (+3 more)
eval/: golden.yaml
eval/fixtures/: polly-telegram.md  project-x-decision.md
src/hippo/: agent.py  api.py  auth.py  chunking.py  cli.py  config.py  db.py  embeddings.py  enrich.py  github.py  ingest.py  mcp_server.py  parsers.py  roles.py  slack_bot.py  storage.py  tool_io.py
src/hippo/api/: app.py  (+8 more)
src/knowledgehub/: agent.py  api.py  chunking.py  cli.py  config.py  enrich.py  ingest.py  storage.py
tests/: conftest.py  test_agent.py  test_api.py  test_api_auth.py  test_api_folders.py  test_api_settings.py  test_auth.py  test_chunking.py  test_cli.py  test_concurrency.py  test_config.py  test_db.py  test_embeddings.py  test_enrich.py  test_env_example.py  test_github.py  test_ingest.py  test_mcp_server.py  test_parsers.py  test_password_auth.py  test_roles.py  test_search.py  test_setup.py  test_slack_bot.py  test_storage.py  test_storage_tokens.py  test_tool_io.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  AssistantText.tsx  ChatView.tsx  DocDrawer.tsx  LoginScreen.tsx  Settings.tsx  SetupWizard.tsx  UploadModal.tsx  app.css  auth.test.ts  auth.ts  chatHistory.test.ts  chatHistory.ts  citations.test.ts  citations.ts  folders.test.ts  folders.ts  main.tsx  settings.test.ts  setup.test.ts  setup.ts  useChatHistory.ts
(+17 files in other folders)
