[project]
name = "hippo"
version = "0.1.0"
description = "Agentic hippo knowledge base: ingest docs, query via chat agent"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "sqlite-vec",
    "typer",
    "watchfiles",
    "markdownify",
    "pyyaml",
    "python-multipart",
    "pyjwt[crypto]>=2.13.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.1",
    "regex>=2024.0.0",
]

[project.scripts]
hippo = "hippo.cli:app"

[dependency-groups]
dev = ["pytest", "anyio", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hippo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
