[project]
name = "hippo"
version = "0.1.0"
description = "Agentic hippo knowledge base: ingest docs, query via chat agent"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.107.0",
    "pydantic-settings>=2.14.1",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "sqlite-vec>=0.1.9",
    "typer>=0.25.1",
    "watchfiles>=1.2.0",
    "markdownify>=1.2.2",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.32",
    "pyjwt[crypto]>=2.13.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.1",
    "regex>=2024.0.0",
    "mammoth>=1.6.0",
    "mcp>=1.27.0",
    "slack-bolt>=1.18",
    "aiohttp>=3.9",
    "argon2-cffi>=23.1.0",
]

[project.scripts]
hippo = "hippo.cli:app"

[dependency-groups]
dev = ["pytest", "anyio", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hippo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
